# transcribe

./: README.md  pyproject.toml
src/transcribe/: main.py
